src/blocks/circular-progress-bar/style.scss
.wp-block-themeisle-blocks-circular-progress-bar {
    .wp-block-themeisle-blocks-circular-progress-bar-title__area {
        display: flex;
        justify-content: center;
        align-items: center;
    
        .wp-block-themeisle-blocks-circular-progress-bar-title__value {
            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
            font-weight: bold;
        }
    }
    
    .wp-block-themeisle-blocks-circular-progress-bar__bar {
        display: flex;
        justify-content: center;
        align-items: center;
    
        .wp-block-themeisle-blocks-circular-progress-bar-container {
            margin: 20px auto;
            max-width: 100%;
        
            .wp-block-themeisle-blocks-circular-progress-bar-bg {
                fill: none;
                stroke: grey;
            }
        
            .wp-block-themeisle-blocks-circular-progress-bar-progress {
                fill: none;
                stroke: darkorange;
                transform-origin: center;
                transform: rotateZ(-90deg);
            }
    
            .wp-block-themeisle-blocks-circular-progress-bar-text {
                text-anchor: middle;
                dominant-baseline: middle;
                fill: darkorange;
                font-family: Verdana, Geneva, Tahoma, sans-serif;
            }
        } 
    }
}

